--- a/hello-react/src/index.css
+++ b/hello-react/src/index.css
@@ -55,3 +55,16 @@ code {
 .comment-user{
   color: #4EB3E3;
 }
+.created_time{
+  color:#38A3D2;
+  margin-left: 170px;
+}
+.del{
+  margin-left: 10px;
+  border:none;
+  width: 30px;
+  color: #333;
+  text-align: center;
+  font-size: 18px;
+  line-height: 16px;
+}
